Dropdown: Add line-height setting

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1002,6 +1002,7 @@ $dropdown-min-width:            10rem !default;
 $dropdown-padding-y:            .3125rem !default;
 $dropdown-spacer:               .125rem !default;
 $dropdown-font-size:            $font-size-base !default;
+$dropdown-line-height:          $line-height-base !default;
 $dropdown-bg:                   $component-bg !default;
 $dropdown-color:                $body-color !default;
 $dropdown-border-color:         $component-border-color !default;
