Utilities-Border: Add `border-width` utils

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -234,6 +234,7 @@ $enable-utility-border-radius-pill:         true !default;
 $enable-utility-border-radius-addition:     true !default;
 $enable-utility-border-radius-sizing:       true !default;
 $enable-utility-border-radius-removal:      true !default;
+$enable-utility-border-width:               true !default;
 
 $enable-utility-clearfix:                   true !default;
 
