--- a/site/_includes/4.0/partials/body.html
+++ b/site/_includes/4.0/partials/body.html
@@ -2,9 +2,9 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3 col-xl-2 cf-sidebar print-none">
+    <aside class="col-md-3 col-xl-2 cf-sidebar print-none">
       {% include sidebar %}
-    </div>
+    </aside>
 
     <main class="col-md-9 col-xl-10 cf-main">
       <div class="cf-toc-align">
