Dropdown: Additional padding variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1011,6 +1011,7 @@ $divider-spacer:        ($spacer / 2) !default;
 // Dropdowns
 // =====
 $dropdown-min-width:            10rem !default;
+$dropdown-padding-x:            0 !default;
 $dropdown-padding-y:            .3125rem !default;
 $dropdown-spacer:               .125rem !default;
 $dropdown-font-size:            $font-size-base !default;
