--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -19,7 +19,7 @@
         z-index: $zindex-dropdown;
         display: none; // none by default, but block on "open" of the menu
         min-width: $dropdown-min-width;
-        padding: $dropdown-padding-y 0;
+        padding: $dropdown-padding-y $dropdown-padding-x;
         margin: $dropdown-spacer 0; // override default ul
         @include font-size($dropdown-font-size);
         line-height: $dropdown-line-height;
