--- a/scss/mixins/_border.scss
+++ b/scss/mixins/_border.scss
@@ -1,4 +1,4 @@
-// stylelint-disable property-blacklist
+// stylelint-disable property-disallowed-list
 
 // All
 @mixin border-radius($radius: $border-radius, $fallback-radius: false) {
