--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -1,4 +1,4 @@
-// stylelint-disable declaration-no-important, property-blacklist
+// stylelint-disable declaration-no-important, property-disallowed-list
 
 @if $enable-utility-border {
     // Perfect circle
