--- a/scss/mixins/_transition.scss
+++ b/scss/mixins/_transition.scss
@@ -1,4 +1,4 @@
-// stylelint-disable property-blacklist
+// stylelint-disable property-disallowed-list
 @mixin transition($transition...) {
     @if $enable-transitions {
         @if length($transition) == 0 {
