--- a/scss/component/_breadcrumb.scss
+++ b/scss/component/_breadcrumb.scss
@@ -8,14 +8,13 @@
     }
 
     .breadcrumb-item {
-        display: flex;
 
         // The separator between breadcrumbs (by default, a forward-slash: "/")
         + .breadcrumb-item {
             padding-left: $breadcrumb-item-padding-x;
 
             &::before {
-                display: inline-block; // Suppress underlining of the separator in modern browsers
+                float: left; // Suppress inline spacing and underlining of the separator
                 padding-right: $breadcrumb-item-padding-x;
                 color: $breadcrumb-divider-color;
                 content: $breadcrumb-divider;
