Reboot: Add smooth scroll for non-reduced motion users

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -9,6 +9,7 @@ $enable-rounded:                true !default;      // true
 $enable-shadows:                false !default;     // false
 $enable-transitions:            true !default;      // true
 $enable-transitions-reduced:    true !default;      // true
+$enable-smooth-scroll:          true !default;      // true
 $enable-grid-classes:           true !default;      // true
 $enable-print-styles:           true !default;      // true
 $enable-palette:                true !default;      // true
