Alert : Support `.link-stretch` by giving z-index to close button
Fix link util settings names in docs

--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -15,6 +15,7 @@
                 position: absolute;
                 top: 0;
                 right: 0;
+                z-index: $link-stretch-z-index + 1;
                 padding: $alert-close-padding-y $alert-close-padding-x;
             }
         }
