Tooltip/Popover: Normalize fade
- Fixes broken popover animation
- Adds option to pass custom `display` rule

--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -2,7 +2,7 @@
     .tooltip {
         position: absolute;
         z-index: $zindex-tooltip;
-        display: block;
+        display: none;
         margin: $tooltip-margin;
         // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
         // So reset our font and text properties to avoid inheriting weird values.
