Utilities-Spacing: Add basic `gap` classes

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -286,6 +286,7 @@ $enable-utility-sizing-height:              true !default;
 $enable-utility-sizing-viewport:            true !default;
 
 $enable-utility-spacing:                    true !default;
+$enable-utility-spacing-gap:                true !default;
 $enable-utility-spacing-padding:            true !default;
 $enable-utility-spacing-margin:             true !default;
 $enable-utility-spacing-margin-auto:        true !default;
