--- a/site/_includes/4.0/partials/head_scripts.html
+++ b/site/_includes/4.0/partials/head_scripts.html
@@ -2,7 +2,7 @@
 <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="{{ site.path }}/assets{{ pathVersion }}/js/vendor/jquery.slim.min.js"><\/script>')</script>
 
-<!-- Popper.js -->
+<!-- Popper -->
 <script src="{{ site.cdn.popper }}" integrity="{{ site.cdn.popper_hash }}" crossorigin="anonymous"></script>
 <script>window.Popper || document.write('<script src="{{ site.path }}/assets{{ pathVersion }}/js/vendor/popper.min.js"><\/script>')</script>
 
