Utilities-Position: Add placement and translate classes

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -271,6 +271,8 @@ $enable-utility-position-fixed-top:         true !default;
 $enable-utility-position-fixed-bottom:      true !default;
 $enable-utility-position-sticky-top:        true !default;
 $enable-utility-position-sticky-top-responsive: true !default;
+$enable-utility-position-placement:         true !default;
+$enable-utility-position-translate:         true !default;
 
 $enable-utility-sronly:                     true !default;
 $enable-utility-sronly-common:              true !default;
