--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -262,6 +262,9 @@ $enable-utility-caret:                      true !default;
 $enable-utility-close:                      true !default;
 $enable-utility-drag:                       true !default;
 
+$enable-utility-user-select:                true !default;
+$enable-utility-pointer-events:             true !default;
+
 $enable-utility-link-stretch:               true !default;
 
 $enable-utility-overflow:                   true !default;
