--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -5,6 +5,7 @@
 @import "utilities/embed";
 @import "utilities/flex";
 @import "utilities/float";
+@import "utilities/interaction";
 @import "utilities/link";
 @import "utilities/overflow";
 @import "utilities/position";
