Utilities-Screen Reader : Allow `sr-only-focusable` to be used on containers

--- a/scss/mixins/_screen-reader.scss
+++ b/scss/mixins/_screen-reader.scss
@@ -20,7 +20,7 @@
 //
 // Useful for "Skip to main content" links; see https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
 @mixin sr-only-focusable {
-    &:not(:focus) {
+    &:not(:focus):not(:focus-within) {
         @include sr-only();
     }
 }
